--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -1,133 +1,154 @@
-/*@media all and (min-width: 700px) and (max-width: 1032px)
+@media all and (min-width: 720px) and (max-width: 1440px)
 {
-    .h2
+    /*#main
     {
-        font-size: 0;
+        margin: 0 auto;
+    }*/
+
+    header
+    {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 0em 3em 0 3em;
+        border-top: 2px solid #f2f2f2;
+    }
+
+    .signup
+    {
+        color: #0065fc;
+        font-weight: bold;
+        margin: 1.8em 1.5em;
+        padding: 1.2em;
+        font-size: inherit;
+        border: none;
+        border-radius: 16px;
+        background-color: unset;
+        cursor: pointer;
+    }
+
+    #s1
+    {
+        margin: 0;
+        padding: 0 3em 0 3em;
+    }
+
+    .recherche1
+    {
+        padding-bottom: 1em;
     }
 
     .title_f
     {
         display: block;
-        padding: 1em;
+        padding: 0 1em 0 0;
     }
 
-    .s1
+    .options_f
     {
-        margin-bottom: 0;
+        padding: 0; 
     }
 
-    .il
+    #s2
     {
-        margin: 1.5em;
-    }
-
-    .s2
-    {
-        padding: 0;
-    }
-
-    #ah1
-    {
-        width: 50%;
-        background-color: white;
-    }
-
-    .presentation
-    {
-        align-items: center;
+        flex-flow: column-reverse wrap-reverse; 
+        margin: 0;
     }
 
     aside
     {
-        width: 50%;
-        padding-bottom: 0.7em;
-        background-color: white;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        min-height: 300px;
+        margin: 0; 
+        box-sizing: content-box;
+        border-radius: 0;
     }
 
-    .graphique
+    .p1
     {
-        padding-top: 3em;
+        width: 300px;
+        height: 140px;
+    }
+
+    .image1
+    {
+        width: 130px;
+        height: 140px;
+    }
+
+    .legendebis
+    {
+        padding: 1em 0 1em 1em;
+    }
+
+    .nuitee2
+    {
+        padding: 0 0 1em 1em;
+    }
+
+    .etoiles2
+    {
+        padding: 1em 0 0 1em;
+    }
+
+    #ah1
+    {
+        background-color: unset;
+        border-radius: 0;
+        width: 88.5%;
     }
 
     .aa1
     {
-        flex-flow: row wrap;
-        justify-content: space-around;
+        display: flex;
+        flex-flow: column wrap;
     }
 
     .vp
     {
-        max-width: 310px;
-        margin: 1em;
+        order: -3;
+        width: 235px;
+        margin: 2em 15em 0 auto;
     }
 
-    .fpif
+    .fpif, .ndgpl
     {
-        max-width: 310px;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 2em;
     }
 
     .cal
     {
-        max-width: 310px;
-        margin: 1em;
+        order: -3;
+        width: 235px;
+        margin: -14em 3em 0 auto;
+        padding: 0;
     }
-
-    .ndgpl
+    
+    .image2, .image3, .image4, .image5
     {
-        max-width: 310px;
-        padding-top: 1em;
+        width: 235px;
+        height: 150px;
     }
 
-    .image2
+    footer
     {
-        max-width: 310px;
-        max-height: 390px;
+        padding: 0;
     }
 
-    .image3
+    .title_ap
     {
-        max-width: 310px;
-        max-height: 136px;
-    }
-
-    .image4
-    {
-        max-width: 310px;
-        max-height: 136px;
-    }
-
-    }
-
-@media all and (min-width: 1033px) and (max-width: 1350px)
-{
-    #ah1
-    {
-        background-color: white;
         padding-left: 3em;
     }
 
-    aside
+    footer li
     {
-        background-color: white;
+        margin: 0.6em auto;
+        padding-right: 2em;
     }
-
-    .aa1
-    {
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-    }
-
-    .ndgpl
-    {
-       flex-flow: row nowrap;
-       padding: 2em;
-    }
-
-    .ndg
-    {
-        margin-right: 2em;
-    }
-
-}*/
+}
 
     
