--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -414,7 +414,7 @@ aside
     background-color: white;
     box-shadow: 0 0 10px #f2f2f2;
     height: 100%;
-    /*width: 340px;*/
+    width: 320px;
 }
 
 .fp
@@ -424,7 +424,7 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     margin-bottom: 3.2em;
     height: 100%;
-    /*width: 310px;*/
+    width: 320px;
 }
 
 .if
@@ -434,7 +434,7 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.1em;
     height: 100%;
-    /*width: 310px;*/
+    width: 320px;
 }
 
 .ndg
@@ -445,7 +445,7 @@ aside
     padding-bottom: 0.1em;
     margin-bottom: 2.8em;
     height: 100%;
-    /*width: 310px;*/
+    width: 320px;
 }
 
 .pl
@@ -455,12 +455,12 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.16em;
     height: 100%;
-    /*width: 310px;*/
+    width: 320px;
 }
 
 .image2
 {
-    /*width: 100%;*/
+    width: 100%;
     height: 490px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
@@ -468,7 +468,7 @@ aside
 
 .image3, .image5
 {
-    /*width: 100%;*/
+    width: 100%;
     height: 187px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
@@ -476,7 +476,7 @@ aside
 
 .image4
 {
-    /*width: 100%;*/
+    width: 100%;
     height: 182px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
